k8s/fpm/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-fpm
  namespace: laravel-demo
  labels:
    app: laravel-fpm
    version: v1
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: laravel-fpm
  template:
    metadata:
      labels:
        app: laravel-fpm
        version: v1
        tier: backend
    spec:
      containers:
      - name: laravel-app
        image: 797805597792.dkr.ecr.us-east-1.amazonaws.com/laravel-swoole-poc/laravel-fpm:latest
        imagePullPolicy: IfNotPresent  # Sempre busca a imagem mais recente do ECR
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
        livenessProbe:
          httpGet:
            path: /ping
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "sleep 5"]
---
